--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -1,23 +1,19 @@
-.app-container {
-  margin-top: "15vh";
-  padding: 30;
-}
+/* Paleta de Colores */
+.color1 { color: #000000 };
+.color2 { color: #7890a8 };
+.color3 { color: #304878 };
+.color4 { color: #181848 };
+.color5 { color: #f0a818 };
 
-@media screen and (min-width:575px){
-  .app-container {
-    margin-top: 0;
-    padding-top:20px;
-    -webkit-justify-content:flex-start;
-    -ms-justify-content:flex-start;
-    justify-content:flex-start
-  }
+.app-container {
+  padding: 30;
 }
 
 .app-login-wrapper {
   background-color: #fff;
-  border-radius: 12;
   padding: 15px;
-  width: 110%;
+  width: 100%;
+  border-radius: 10px;
 }
 
 .ant-card-body {
@@ -82,6 +78,7 @@
   padding-bottom: .5rem;
   border-top: #eee;
   margin-bottom: 5px;
+  align-items: center;
 }
 
 .app-login-subtitle {
@@ -89,6 +86,7 @@
   font-weight: 400;
   color:rgb(5 5 5 / 60%);
   margin-bottom: 5px;
+  align-items: center;
 }
 
 .app-login-footer {
@@ -99,5 +97,65 @@
 }
 
 .ant-divider {
-  margin: 12px 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.ant-btn-primary {
+  border-color: #f0a818;
+  background: #f0a818;
+  color: #fff;
+}
+
+.ant-btn-primary:hover {
+  border-color: #f7d38b;
+  background: #f7d38b;
+  color: #fff;
+}
+
+.ant-col-12 {
+  flex: unset;
+}
+
+.ant-divider-horizontal.ant-divider-with-text {
+  margin: 5px 0;
+  font-size: 12px;
+}
+
+.icon-google {
+  border-radius: '50%';
+}
+
+.icon-facebook {
+  border-radius: '50%';
+}
+
+.ant-col {
+  margin: 0 auto;
+}
+
+.main-col {
+  margin-top: 15vh;
+}
+
+.ant-row .ant-row-center {
+  margin-top: 10vh !important;
+}
+
+@media screen and (max-width:575px){
+  .app-container {
+    margin: auto !important;
+  }
+
+  .ant-row-center {
+    margin: auto !important;
+  }
+
+  .ant-col {
+    margin: auto;
+  }
+
+  .main-col {
+    margin: 10vh auto !important;
+  }
 }
